@@ -1,3 +1,12 @@
+2011-11-23  Jari Aalto  <jari.aalto@cante.net>
+
+	* makefile.sh (Main): set permissions of .ssh/authorized_keys
+	and .ssh/id* files.
+
+	* bin/restricted-shell-create.1.pod: Start entences with
+	capital letter.
+	(EXAMPLES): Mention authorized_keys.
+
 2011-11-22  Jari Aalto  <jari.aalto@cante.net>
 
 	* Makefile (test-pod): Rename target from pod-test.
